# aria2c-gui

./: .gitignore  Cargo.toml  README.md
src/: api.rs  aria2c.rs  main.rs  notifier.rs  tests.rs  tray.rs  utils.rs  watcher.rs
static/: .gitignore  gulpfile.js  package.json
static/src/: index.html.tera
static/src/langs/: zh_Hant.txt
static/src/scripts/config/: aria2Options.js  constants.js
static/src/scripts/controllers/: main.js
static/src/scripts/services/: aria2TaskService.js
static/src/views/: list.html
